# ncurses-snake

./: CMakeLists.txt  Doxyfile  README.md
src/: main.cpp
src/implement/: Board.cpp  Food.cpp  Point.cpp  Snake.cpp
src/include/: Board.h  Food.h  Point.h  Snake.h
