#cmake_minimum_required(VERSION 2.8.7)
#PROJECT(Rugal C)
#SET(CMAKE_C_FLAGS "-O0 -ggdb -w -std=c99")
#SET(CMAKE_C_COMPILER gcc)

#INCLUDE_DIRECTORIES(
    #${CMAKE_CURRENT_SOURCE_DIR}/src/include
#)

#SET(SOURCE
    #${SOURCE}
    #${CMAKE_CURRENT_SOURCE_DIR}/src/main.c
    #${CMAKE_CURRENT_SOURCE_DIR}/src/implement/Point.c
#)
#SET(LIBRARIES libm.so)
#message(${PROJECT_SOURCE_DIR})
#FIND_PACKAGE(Curses REQUIRED)
#ADD_EXECUTABLE(Rugal ${SOURCE})
#TARGET_LINK_LIBRARIES(Rugal ${CURSES_LIBRARIES})

cmake_minimum_required(VERSION 2.6)
PROJECT(Rugal)
SET(CMAKE_CPP_FLAGS "-O2 -g -ggdb -Wall -std=c++11")
SET(CMAKE_CPP_COMPILER g++)
SET(CMAKE_CPP_COMPILER_ENV_VAR g++)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}/src/include
)

SET(SOURCE
    ${SOURCE}
    ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/implement/Point.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/implement/Food.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/implement/Snake.cpp
)
FIND_PACKAGE(Curses REQUIRED)
ADD_EXECUTABLE(Rugal ${SOURCE})
TARGET_LINK_LIBRARIES(Rugal ${CURSES_LIBRARIES})
